    + [NT] Recognise "<dist>-backports-sloppy" as a valid
      distribution.  Thanks to Romain Francoise for the
      report and the patch.  (Closes: #705170)
  * checks/po-debconf:
    + [NT] Remove tests for commands that are provided by
      Lintian's dependencies.

  * collection/debfiles:
    + [NT] Replace makeshift "is_ancestor_of" check with the
      one from L::Util.

  * lib/Lintian/Util.pm:
    + [NT] Fix a race condition in touch_file.
    + [NT] Add sanity check in perm2oct for bad permission
      strings and throw errors when they are seen (instead
      of returning 0).
    + [NT] Require that the input file is present for
      read_dpkg_control and get_deb_control.
    + [NT] In copy_dir, pass --reflink=auto to cp.

  * reporting/harness:
    + [NT] Stop exporting ENV variables that lintian no longer
      cares about.

 -- Niels Thykier <niels@thykier.net>  Tue, 16 Apr 2013 18:24:45 +0200

lintian (2.5.12) experimental; urgency=medium

  * Summary of tag changes:
    + Added:
      - ambiguous-paragraph-in-dep5-copyright
      - binary-file-built-without-LFS-support
      - debian-tests-control-is-not-a-regular-file
      - debian-tests-control-uses-national-encoding
      - debug-file-with-no-debug-symbols
      - desktop-entry-lacks-keywords-entry
      - dir-or-file-in-build-tree
      - dir-or-file-in-etc-opt
      - dir-or-file-in-home
      - file-name-is-not-valid-UTF-8
      - font-adobe-copyrighted-fragment-no-credit
      - font-package-not-multi-arch-foreign
      - illegal-runtime-test-name
      - inconsistent-testsuite-field
      - license-problem-gfdl-invariants
      - license-problem-gfdl-invariants-empty
      - menu-icon-uses-relative-path
      - missing-runtime-test-file
      - missing-runtime-tests-field
      - package-contains-broken-symlink-wildcard
      - package-contains-unsafe-symlink
      - runtime-test-file-is-not-a-regular-file
      - source-contains-unsafe-symlink
      - unknown-runtime-tests-feature